# git-review

./: .gitreview  .zuul.yaml  CONTRIBUTING.rst  README.rst  bindep.txt  git-review.1  setup.cfg  setup.py  test-requirements.txt  tox.ini
debian/: changelog  control  copyright  rules  salsa-ci.yml  watch
debian/patches/: fix-unit-test-for-python-3.12.patch  series
debian/tests/: control
doc/: requirements.txt
doc/source/: conf.py  installation.rst
git_review/: cmd.py
git_review/tests/: __init__.py  check_test_id_hashes.py  prepare.py  test_git_review.py  test_unit.py  utils.py
releasenotes/notes/: add-no-thin-option-ea7cb50e22e7017d.yaml  branch-author-selection-02d8652d12c4dd7a.yaml  commit-hook-submodules-121f76901305ff98.yaml  default-notopic-3f854006482616cd.yaml  discontinue-draft-support-031e1fe3453ca839.yaml  drop-py35-a078f1c6f3c4fff4.yaml  drop-python27-support-37e1602a03d602ab.yaml  fix-show-signatures-5e9c12d43b7051f0.yaml  git-credentials-bytes-6fcecd405dc4ed29.yaml  ignore-unstaged-uncommitted-submodule-changes-99dbf054f5617d08.yaml  improve-git-version-checking-38933ca3970d58ff.yaml  preserve-local-edits-on-download-0f11c676e5516d9f.yaml  push-no-follow-tags-3f366ecee85b508d.yaml  refuse-unstaged-changes-61600bd33adf3a45.yaml  scp-subsystem-c8d78aa8f7f69f66.yaml  support-core-hooks-path-ea5402d5d6204f70.yaml  use-rebase-merges-2550c9573cfbf39a.yaml  user-notifications-0276f6c14d119225.yaml
