[metadata]
name = git-review
summary = Tool to submit code to Gerrit
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
author = OpenDev Contributors
author_email = service-discuss@lists.opendev.org
url = http://docs.opendev.org/opendev/git-review
project_urls =
    Browse Source = https://opendev.org/opendev/git-review
    Bug Reporting = https://storyboard.openstack.org/#!/project/opendev/git-review
    Documentation = https://docs.opendev.org/opendev/git-review
    Git Clone URL = https://opendev.org/opendev/git-review
    License Texts = https://opendev.org/opendev/git-review/src/branch/master/LICENSE
    Release Notes = https://docs.opendev.org/opendev/git-review/latest/releasenotes.html
keywords = git gerrit review commandline
license = Apache License, Version 2.0
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python
    Topic :: Utilities
python_requires = >= 3.6

[files]
packages =
    git_review

[entry_points]
console_scripts =
    git-review = git_review.cmd:main

[pbr]
manpages =
    git-review.1
